--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <meta charset="UTF-8">
 
-
+<a href="https://komikage.github.io/">
+      <img border="0" alt="komikage.github.io" src="home.png" 
+      width="75" height="75 " style="position: absolute; right: 50px; top: 0px;">
+    </a>
 
 <div style = "position:absolute; left:540px; top:20px; ">
   
