--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <a href="https://komikage.github.io/">
       <img border="0" alt="komikage.github.io" src="/home.png" 
-      width="75" height="75 " style="position: static; right: 50px; top: 0px;">
+      width="75" height="75 " style="position: absolute; right: 50px; top: 0px;">
     </a>
 
 <div style = "position:absolute; left:540px; top:20px; ">
