--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 
 <a href="https://komikage.github.io/">
-      <img border="0" alt="komikage.github.io" src="/home.png" 
+      <img border="0" alt="komikage.github.io" src="home.png" 
       width="75" height="75 " style="position: absolute; right: 50px; top: 0px;">
     </a>
 
